Fixed blog scction mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10091,17 +10091,17 @@ footer div.copyright p {
 .blog-post-section .blog-col#col-img img {
   height: 225px;
 }
-.blog-post-section .blog-col#col-post h2,
-.blog-post-section .blog-col#col-post h2 {
+.blog-post-section .blog-col#col-post h3,
+.blog-post-section .blog-col#col-post h3 {
   margin: 30px 0 20px 0;
   text-align: center;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 1.2rem;
 }
 .blog-post-section .blog-col#col-post p,
 .blog-post-section .blog-col#col-post p {
   font-size: 0.75rem;
+  padding: 0 30px 0 30px;
 }
 
 /*----------  Blog Section  ----------*/
