--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -63,17 +63,17 @@
         &#col-post {
             // width: 75%;
 
-            h2 {
-                margin        : 30px 0 20px 0;
-                text-align    : center;
-                text-transform: uppercase;
-                font-weight   : 500;
-                font-size     : 1.2rem;
+            h3 {
+                margin           : 30px 0 20px 0;
+                text-align       : center;
+                text-transform   : uppercase;
+                font-weight      : 500;
+                // font-size     : 1.2rem;
             }
 
             p {
-                font-size   : .75rem;
-                // padding  : 30px 0 30px 0;
+                font-size: .75rem;
+                padding  : 0 30px 0 30px;
             }
 
             // h2 {
